<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.whb.fragmenttest.MainActivity" >

    <item
        android:id="@+id/action_settings_menu1"
        android:orderInCategory="100"
        android:title="@string/action_settings_menu1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings_menu2"
        android:orderInCategory="100"
        android:title="@string/action_settings_menu2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings_menu3"
        android:orderInCategory="100"
        android:title="@string/action_settings_menu3"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings_menu4"
        android:orderInCategory="100"
        android:title="@string/action_settings_menu4"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings_menu5"
        android:orderInCategory="100"
        android:title="@string/action_settings_menu5"
        app:showAsAction="never"/>

</menu>
